--- a/api/pom.xml
+++ b/api/pom.xml
@@ -71,8 +71,14 @@
         </dependency>
 
 		<dependency>
-			<groupId>org.graalvm.sdk</groupId>
-			<artifactId>graal-sdk</artifactId>
+			<groupId>org.graalvm.js</groupId>
+			<artifactId>js</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.graalvm.js</groupId>
+			<artifactId>js-scriptengine</artifactId>
 		</dependency>
 
 		<!-- For Testing -->
