--- a/api/pom.xml
+++ b/api/pom.xml
@@ -52,13 +52,6 @@
 		<!-- End OpenMRS core -->
 
         <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.9.0</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>appframework-appsfortesting</artifactId>
             <version>${project.parent.version}</version>
@@ -79,6 +72,16 @@
 		<dependency>
 			<groupId>org.graalvm.js</groupId>
 			<artifactId>js-scriptengine</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
 		</dependency>
 
 		<!-- For Testing -->
