--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ on:
 
 jobs:
 
-build-mac:
+  build-8:
 
     runs-on: macos-latest
 
@@ -31,24 +31,9 @@ build-mac:
     - name: Build with Maven
       run: mvn clean install --file pom.xml
       
-  build-8:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 8
-      uses: actions/setup-java@v3
-      with:
-        java-version: '8'
-        distribution: 'adopt'
-        cache: maven
-    - name: Build with Maven
-      run: mvn clean install --file pom.xml
-      
   build-11:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -63,7 +48,7 @@ build-mac:
       
   build-17:
 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v3
